--- a/composer.json
+++ b/composer.json
@@ -58,7 +58,7 @@
     },
     "extra": {
         "laravel": {
-            "dont-discover": 
+            "dont-discover":[]
         }
     },
     "config": {
